--- a/assets/style.css
+++ b/assets/style.css
@@ -45,4 +45,14 @@
 .currentWeather {
     border: 1px solid #C1C1C1 ;
     margin-top: 5%;
+    padding: 20px;
+    width: 95%;
+}
+
+.weatherIcon {
+    display: inline-block;
+}
+
+.cityName {
+    display: inline-block;
 }
