added current date and UV index api

--- a/assets/style.css
+++ b/assets/style.css
@@ -44,7 +44,7 @@
 
 .currentWeather {
     border: 1px solid #C1C1C1 ;
-    margin-top: 5%;
+    margin-top: 20px;
     padding: 20px;
     width: 95%;
 }
@@ -53,6 +53,37 @@
     display: inline-block;
 }
 
+.date {
+    display: inline-block;
+    padding-right: 10px;
+}
+
 .cityName {
     display: inline-block;
+    padding-right: 22px;
+}
+
+.uvIndex {
+    background-color: red;
+    padding: 8px;
+    border-radius: 10px;
+    color: white;
+    display: inline-block;
+}
+
+p {
+    padding: 12px 0;
+}
+
+h2 {
+    margin: 12px 0;
+}
+
+.fiveDayBlock {
+    background-color: blue;
+    width: 17%;
+    margin: 0 1%;
+    display: inline-block;
+    color: white;
+    padding: 10px;
 }
